--- a/vignettes/traitdataform.Rmd
+++ b/vignettes/traitdataform.Rmd
@@ -49,13 +49,26 @@ If reading files from a file repository, you can refer to the URL directly, e.g.
 
 ```{r}
 
+heteroptera_raw <-  utils:::read.csv(url("https://ndownloader.figshare.com/files/5633883", 
+                                         encoding = "windows-1252", method = "libcurl"), 
+                                    sep = "\t",
+                                    stringsAsFactors=TRUE)
+
+```
+
+
+```{r}
+
 # pulling data from van der Plas F, van Klink R, Manning P, Olff H, Fischer M (2017) Sensitivity of functional diversity metrics to sampling intensity. Methods in Ecology and Evolution 8(9): 1072-1080. https://doi.org/10.1111/2041-210x.12728
 
 file_url <- url("http://datadryad.org/bitstream/handle/10255/dryad.134418/carabid%20traits%20final.txt?sequence=1", 
                                 encoding = "UTF-8", method = "libcurl"
                 )
+```
 
-carabids <- utils::read.csv(file_url, sep = "\t")
+
+```{r}
+carabids <- utils::read.delim(file_url)
 ```
 
 Most trait data are stored in one of the following two formats:
