--- a/vignettes/traitdataform.Rmd
+++ b/vignettes/traitdataform.Rmd
@@ -50,7 +50,7 @@ If reading files from a file repository, you can refer to the URL directly, e.g.
 ```{r}
 # pulling data from van der Plas F, van Klink R, Manning P, Olff H, Fischer M (2017) Sensitivity of functional diversity metrics to sampling intensity. Methods in Ecology and Evolution 8(9): 1072-1080. https://doi.org/10.1111/2041-210x.12728
 
-carabids <- read.delim("https://datadryad.org/bitstream/handle/10255/dryad.134418/carabid traits final.txt")
+carabids <- read.delim("https://datadryad.org/bitstream/handle/10255/dryad.134418/carabid%20traits%20final.txt")
 
 ```
 
