--- a/vignettes/traitdataform.Rmd
+++ b/vignettes/traitdataform.Rmd
@@ -93,7 +93,7 @@ In case of multiple assignments to the same taxon, the script assumes an observa
 ```{r}
 
 heteroptera_raw <-  utils:::read.csv(url("https://ndownloader.figshare.com/files/5633883", 
-                                         encoding = "windows-1252", method = "libcurl"), 
+                                         encoding = "windows-1252"), 
                                     sep = "\t",
                                     stringsAsFactors=TRUE)
 
